WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92241
[EFL][WK2][WTR] Alt, Shift and Ctrl keys are not handled by EventSenderProxy.
https://bugs.webkit.org/show_bug.cgi?id=92241
Summary
[EFL][WK2][WTR] Alt, Shift and Ctrl keys are not handled by EventSenderProxy.
Mikhail Pozdnyakov
Reported
2012-07-25 05:17:49 PDT
Alt, Shift and Ctrl keys are not handled by EventSenderProxy. It causes failure of fast/events/keydown-leftright-keys.html test.
Attachments
patch
(2.28 KB, patch)
2012-07-25 05:23 PDT
,
Mikhail Pozdnyakov
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mikhail Pozdnyakov
Comment 1
2012-07-25 05:23:44 PDT
Created
attachment 154327
[details]
patch
Chris Dumez
Comment 2
2012-07-25 05:44:18 PDT
Comment on
attachment 154327
[details]
patch LGTM.
WebKit Review Bot
Comment 3
2012-07-25 13:05:27 PDT
Comment on
attachment 154327
[details]
patch Clearing flags on attachment: 154327 Committed
r123647
: <
http://trac.webkit.org/changeset/123647
>
WebKit Review Bot
Comment 4
2012-07-25 13:05:31 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug