[EFL][WK2][WTR] Alt, Shift and Ctrl keys are not handled by EventSenderProxy. https://bugs.webkit.org/show_bug.cgi?id=92241

Patch by Mikhail Pozdnyakov <mikhail.pozdnyakov@intel.com> on 2012-07-25
Reviewed by Kenneth Rohde Christiansen.

Alt, Shift and Ctrl keys were not handled by EventSenderProxy.
It caused failure of fast/events/keydown-leftright-keys.html test.

* WebKitTestRunner/efl/EventSenderProxyEfl.cpp: Added handling of Alt, Shift and Ctrl keys.
(WTR::keyName):

Canonical link: https://commits.webkit.org/110087@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123647 268f45cc-cd09-0410-ab3c-d52691b4dbfc